# alchemist

./: .clippy.toml  .gitignore  .gitmodules  .mcp.json  ALCHEMIST_HYBRID_RENDERER_PLAN.md  ALCHEMIST_WORKING_DEMO.md  BEVY_FIX_PROGRESS.md  CACHE-GUIDE.md  CHANGELOG.md  COMMIT_MESSAGE.md  CURRENT_TEST_STATUS.md  CURSOR-FORMAT-SETUP.md  Cargo.toml  DEPLOYMENT_READY_SUMMARY.md  FEATURES-ADDED.md  FINAL_TEST_STATUS.md  IMPLEMENTATION_COMPLETE.md  LICENSE  PANEL_SYSTEM.md  PROJECT_STATUS.md  README-graph-viewer.md  README.md  RELEASE_NOTES_v0.4.0.md  UI-FIXED.md  UI_COMPLETION_SUMMARY.md  UI_FINAL_SUMMARY.md  UI_IMPLEMENTATION.md  actual-compilation-status.md  actual-status.md  alchemist-application-plan.md  alchemist.code-workspace  alchemist.toml  alchemist_ui_working.rs  analyze-cache-miss.nix  bevy-conversion-summary.md  build-status.md  build_output.txt  cache-config.nix  cache-management.nix  cache-readme.md  (+120 more)
.cargo/: config.local.toml  config.override.toml  config.toml
.github/: code-of-conduct.md  pull_request_template.md  security.md
about/: demo-fixes-summary.md  demo-scenarios.md  demo-script.md  investor-presentation.md  readme.md  technical-architecture.md
alchemist-renderer/: Cargo.toml  README_MARKDOWN_CHART.md  alchemist_demo  implementation-summary.md  test-coverage-report.md
alchemist-renderer/examples/: bar_chart_example.json  chart_example.json  markdown_example.md  pie_chart_example.json
alchemist-renderer/src/: bevy_renderer.rs  chart_view.rs  dashboard_app.rs  iced_minimal.rs  iced_renderer.rs  iced_simple.rs  main.rs  markdown_view.rs  rss_feed_view.rs
alchemist-renderer/src/bevy_renderer/: event_systems.rs
alchemist-renderer/src/iced_renderer/: chart_view.rs  dashboard_app.rs  dashboard_realtime_app.rs  dialog_ui.rs  dialog_ui_events.rs  dialog_ui_simple.rs  event_monitor_view.rs  markdown_view.rs  rss_feed_view.rs
benches/: alchemist_benchmarks.rs
cim-agent-coordination/: Cargo.toml
cim-agent-coordination/src/: consensus.rs  coordinator.rs  discovery.rs  lib.rs  presence.rs  registry.rs  task.rs
cim-agent-coordination/src/consensus/: protocol.rs  qualified_majority.rs  simple_majority.rs  weighted_voting.rs
cim-domain-collaboration/: Cargo.toml
cim-domain-collaboration/examples/: collaboration_demo.rs
cim-domain-collaboration/src/: lib.rs
cim-domain-collaboration/src/aggregate/: mod.rs
cim-domain-collaboration/src/commands/: mod.rs
cim-domain-collaboration/src/events/: mod.rs
cim-domain-collaboration/src/handlers/: mod.rs
cim-domain-collaboration/src/projections/: mod.rs
cim-domain-collaboration/src/queries/: mod.rs
cim-domain-collaboration/src/websocket/: mod.rs
cim-domain-collaboration/tests/: integration_tests.rs
cim-domain-git/: Cargo.toml  flake.nix
cim-ipld-graph/: Cargo.toml
deployment/: NIXOS_DEPLOYMENT_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  docker-compose.production.yml  readme.md
doc/: Cim-Messaging.md  WORKFLOW_COMPLETION_SUMMARY.md  WORKFLOW_STATE_MACHINE_IMPLEMENTATION.md  WORKFLOW_STATE_MACHINE_SUMMARY.md  cid-cache.md  cim-comms.md  cim-events.md  cim-graphs.md  cim-minio.md  deployment-graph-usage.md  documentation-update-status.md  ecs-implementation-summary.md  event-migration-examples.md  event-monitoring-implementation.md  event-monitoring.md  frobenius-axiom.md  graphs.md  hypergraphs.md  local-cache.md  nixos-cid.md  nixos-mdc.md  panel-consolidation-plan.md  phase1-emergency-fixes.md  phase2-component-extraction.md  phase2-summary.md  readme.md  rust-ast.md  system-conflict-analysis.md  system-conflict-implementation-status.md  visual.md  vocabulary.md
docs/: PERFORMANCE_OPTIMIZATION.md  RENDERER_API.md  RENDERING_FEATURES.md  TEST_COVERAGE_REPORT.md  UI_GUIDE.md  advanced-features-summary.md  performance-guide.md  performance-implementation-summary.md  performance-optimization.md  quick-start.md  quickstart.md  readme.md  rss-nlp-integration.md  shell-commands.md  test-status-report.md  troubleshooting.md  user-stories.md  workflow-system.md
examples/: README.md  advanced_features_demo.rs  ai_agent_dialog_memory.rs  ai_agent_with_memory.rs  alchemist_api_demo.rs  alchemist_gui_showcase.rs  approval_workflow.rs  approval_workflow.rs.disabled  benchmark_contextgraph.rs  bevy_3d_showcase.rs  bridge_architecture_demo.rs  bridge_cli_demo.rs.disabled  cache_patterns_demo.rs  category_theory_demo.rs  chart_viewer_demo.rs  conceptual_graph_demo.rs  conceptual_graph_visualization_demo.rs  conceptual_graph_visualization_demo.rs.disabled  conceptual_reasoning_demo.rs  conceptual_visualization_demo.rs  context_bridge_demo.rs  context_bridge_demo.rs.disabled  cross_domain_demo.rs  cross_domain_nats_demo.rs  cross_domain_search_demo.rs  custom_ui_window.rs  deployment_automation_demo.rs  deployment_demo.rs  deployment_graph_ui.rs  deployment_manager_demo.rs  dialog_automation.rs  dialog_window_demo.rs  document_context_demo.rs  document_context_demo.rs.disabled  document_context_export.rs  document_context_export.rs.disabled  domain_event_publisher.rs  domain_ui_demo.rs  ecs_event_sourcing_demo.rs  enhanced_visualization_demo.rs  (+74 more)
graph-composition/: Cargo.toml
nix/: bevy-patched.nix  build-hyperv-vm.sh  devshell.nix  flake.nix  hyperv-flake.nix  hyperv-vm.nix  leaf.nix  monitoring.nix  overlay.nix  package-with-tests.nix  package.nix  readme-hyperv-vm.md  run-tests.nix  rust-deps.nix  test-package.nix  test-runner-build.nix  test-runner.nix  test-wrapper.sh
patches/: bevy-remove-experimental-occlusion.patch
samples/: borders.rs  directional_navigation.rs  visibility_range.rs  wireframe.rs
scripts/: README.md  batch-extract-domains.sh  copy-user-stories.sh  coverage.sh  create-domain-repos.nix  create-github-repos.nix  demo_markdown_import.sh  extract-agent-domain-complete.sh  extract-agent-domain.sh  extract-document-domain-complete.sh  extract-document-domain.sh  extract-domain-submodules.sh  extract-graph-domain.sh  extract-location-domain.sh  extract-organization-domain-complete.sh  extract-organization-domain.sh  (+27 more)
test-agent/: Cargo.toml
test-agent/src/: agent_service.rs  main.rs
(+1420 files in other folders)
