[package]
name = "alchemist"
authors = ["CowboyAI"]
description = "Alchemist - CIM Control System"
version = "0.5.0"
edition = "2021"
exclude = ["examples/"]

[lints.clippy]
all = { level = "warn", priority = -1 }

# The following ensures clippy ignores examples
# through Cargo's workspace inheritance
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace]
exclude = ["examples/", "bevy-patched", "cim-domain-agent", "cim-domain-bevy", "cim-agent-alchemist", "cim-domain-identity", "cim-domain-graph", "cim-domain-organization", "cim-domain-person", "cim-domain-policy", "cim-compose", "cim-domain-git"]
members = [
  "cim-component",
  "cim-conceptgraph",
  "cim-contextgraph",
  "cim-domain",
  "cim-domain-conceptualspaces",
  "cim-domain-dialog",
  "cim-domain-document",
  "cim-domain-location",
  "cim-domain-nix",
  "cim-domain-workflow",
  "cim-infrastructure",
  "cim-ipld",
  "cim-ipld-graph",
  "cim-subject",
  "cim-workflow-graph",
  "cim-keys",
  "cim-security",
  "cim-bridge", "alchemist-renderer",
]
resolver = "2"

[features]
default = []
integration-tests = []

[dependencies]
# Core dependencies
rand = "0.9"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.6"
serde_yaml = "0.9"

# Shell dependencies
config = "0.14"
toml = "0.8"
clap = { version = "4.5", features = ["derive", "cargo"] }
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
directories = "5.0"
notify = "7.0"
walkdir = "2.5"
dashmap = "6.1"
shellexpand = "3.1"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# NATS messaging
async-nats = { version = "0.41", features = ["service"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Git operations
git2 = "0.19"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Content addressing
cim-ipld = { path = "cim-ipld" }
cim-contextgraph = { path = "cim-contextgraph" }
cim-workflow-graph = { path = "cim-workflow-graph" }
cim-ipld-graph = { path = "cim-ipld-graph" }
cim-domain = { path = "cim-domain" }
cim-domain-workflow = { path = "cim-domain-workflow" }
cim-domain-location = { path = "cim-domain-location" }
cim-domain-document = { path = "cim-domain-document" }
cim-domain-conceptualspaces = { path = "cim-domain-conceptualspaces" }
cim-subject = { path = "cim-subject" }
cim-domain-nix = { path = "cim-domain-nix" }
cim-domain-dialog = { path = "cim-domain-dialog" }
cim-keys = { path = "cim-keys" }
cim-bridge = { path = "cim-bridge" }
cid = { version = "0.11", features = ["serde"] }
multihash = { version = "0.19", features = ["std"] }
blake3 = "1.5"

# Channel implementations
crossbeam-channel = "0.5"
futures = "0.3"

# Caching
lru = "0.12"

# Time handling
time = { version = "0.3", features = ["serde", "formatting"] }

# Compression
zstd = "0.13"

# Bytes handling
bytes = "1.5"

# Parsing
nom = "7.1"
pulldown-cmark = "0.13"

# For temporary files
tempfile = "3.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
tempfile = "3.8"
uuid = { version = "1.10", features = ["v4"] }
colored = "2.1"
async-nats = { version = "0.41", features = ["service"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
mockito = "1.6"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
strip = true

[lib]
name = "alchemist"
path = "src/lib.rs"

[[bin]]
name = "ia"
path = "src/main.rs"

# Shell/CLI demos only
[[example]]
name = "show_event_flow"
path = "examples/show_event_flow.rs"
required-features = []

[[example]]
name = "show_jetstream_events"
path = "examples/show_jetstream_events.rs"
required-features = []

[[example]]
name = "ai_agent_with_memory"
path = "examples/ai_agent_with_memory.rs"
required-features = []

[[example]]
name = "ai_agent_dialog_memory"
path = "examples/ai_agent_dialog_memory.rs"
required-features = []

[[example]]
name = "conceptual_reasoning_demo"
path = "examples/conceptual_reasoning_demo.rs"
required-features = []

[[example]]
name = "rss_feed_processor"
path = "examples/rss_feed_processor.rs"
required-features = []

[[test]]
name = "integration"
path = "tests/lib.rs"
required-features = ["integration-tests"]
