[package]
name = "cim-agent-coordination"
version = "0.1.0"
edition = "2021"
authors = ["The CowboyAI Team"]
description = "Multi-agent coordination service for CIM"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"

# NATS messaging
async-nats = "0.37"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Data structures
dashmap = "6.1"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

# CIM dependencies
cim-domain = { path = "../cim-domain" }
cim-domain-agent = { path = "../cim-domain-agent" }

[dev-dependencies]
tokio-test = "0.4"

[lints]
workspace = true
