[package]
name = "test-agent"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "test-agent"
path = "src/main.rs"

[[bin]]
name = "agent-service"
path = "src/agent_service.rs"

[dependencies]
async-nats = "0.41"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
